--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 REACT_APP_COUNTRY_API_KEY="TwBqMEpJ57NJsOil94499w==Natjj0ssjnbeQb5x" 
 
 # Base endpoint for the Country API
-REACT_APP_COUNTRY_API_URL="https://api.api-ninjas.com/v1/country"
+REACT_APP_COUNTRY_API_URL="https://api.api-ninjas.com/v1/country?name="
